# guard

./: .gitignore  README.md  admin_setup_template.html  docker-compose.yaml  join_document_template.html  pyproject.toml  settings.example.yaml  settings.schema.yaml
scripts/: google_oauth_bootstrap.py
src/: config_schema.py  prepare.py
src/api/: __main__.py  app.py  docs.py  lifespan.py
src/modules/google_/: constants.py  exceptions.py  greeting.py  repository.py  routes.py  schemas.py  service.py
src/storages/mongo/: models.py
